# infernal.core

./: .gitignore  LICENSE  README.md  pyproject.toml  riot.txt
docs/: example.py
infernal/: error_factory.py  exception.py  exception_factory.py  service.py  session.py  static.py
infernal/common/: utils.py
infernal/core/: exception.py  service.py  session.py  static.py
infernal/graphics/: navgrid.py
infernal/services/__metadata__/: errors.json  regions.json
infernal/services/__template__/: service.json
infernal/services/__templates__/: paginators.json  service_v1.json
infernal/services/lol-champion/: service.json
infernal/services/lol-champion-mastery/: service.json
infernal/services/lol-league/: service.json
infernal/services/lol-match/: service.json
infernal/services/lol-status/: service.json
infernal/services/lol-summoner/: service.json
infernal/services/lol-tournament/: service.json
scripts/: build_components.py
scripts/developer.riotgames.com/champion-mastery-v4/: _getAllChampionMasteries.html  _getChampionMastery.html  _getChampionMasteryScore.html
scripts/developer.riotgames.com/champion-v3/: _getChampionInfo.html
scripts/developer.riotgames.com/clash-v1/: _getPlayersBySummoner.html  _getTeamById.html  _getTournamentById.html  _getTournamentByTeam.html  _getTournaments.html
scripts/developer.riotgames.com/league-exp-v4/: _getLeagueEntries.html
scripts/developer.riotgames.com/league-v4/: _getChallengerLeague.html  _getLeagueById.html  (+4 more)
tests/: conftest.py  context.py  dev.env  localtest.py  reader.py  test.py  test_services.py
(+36 files in other folders)
