[tool.poetry]
name = "infernal"
version = "0.0.0"
description = "Core library for the Infernal eSports Analytics Infernal library."
authors = ["Shparki <murrmat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pydocstyle = "^5.0.2"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
